--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "test" : "echo $hello!"
+
   },
   "dependencies": {
     "astro": "^2.8.3"
