--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test": "echo $hello!"
   },
   "dependencies": {
+    "@astrojs/preact": "^2.2.1",
     "@astrojs/rss": "^2.4.3",
-    "astro": "^2.8.3"
+    "astro": "^2.8.3",
+    "preact": "^10.16.0"
   }
 }
