--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test": "echo $hello!"
   },
   "dependencies": {
-    "@astrojs/preact": "^2.2.1",
     "@astrojs/rss": "^2.4.3",
+    "@astrojs/tailwind": "^4.0.0",
     "astro": "^2.8.3",
-    "preact": "^10.16.0"
+    "preact": "^10.16.0",
+    "tailwindcss": "^3.3.3"
   }
 }
